--- a/prueva_fixed.html
+++ b/prueva_fixed.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Nav Fijo</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>Nav Fijo</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
 
-    nav {
-      position: fixed; /* Hace que se quede fijo */
-      top: 0;
-      left: 0;
-      width: 100%; /* Que ocupe todo el ancho */
-      background-color: #333;
-      color: white;
-      padding: 15px 20px;
-      z-index: 1000; /* Para que quede por encima de todo */
-    }
+      nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        color: white;
+        padding: 15px 20px;
+        z-index: 1000;
+      }
 
-    .contenido {
-      margin-top: 70px; /* Espacio para que el nav no tape el contenido */
-      padding: 20px;
-    }
-  </style>
-</head>
-<body>
+      .contenido {
+        margin-top: 70px;
+        padding: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>Mi barra de navegación fija</nav>
 
-  <nav>
-    Mi barra de navegación fija
-  </nav>
-
-  <div class="contenido">
-    <h1>Contenido de la página</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis risus a lorem porttitor fermentum. (Repite esto varias veces para probar scroll).</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-    <p>Lorem ipsum dolor sit amet...</p>
-  </div>
-
-</body>
+    <div class="contenido">
+      <h1>Contenido de la página</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+        quis risus a lorem porttitor fermentum. (Repite esto varias veces para
+        probar scroll).
+      </p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p>AQUI VA EL TRAPO DE LORENZO</p>
+      <p>AQUI VA UN NOMBRE QUE SI VALGA LA PENA</p>
+    </div>
+  </body>
 </html>
