--- a/frontend/pagina_principal.html
+++ b/frontend/pagina_principal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RD_Tecnology</title>
     <link rel="stylesheet" href="pagina_principal.css">
+    <link rel="stylesheet" href="pagina_principal.js">
     <link rel="icon" href="WhatsApp Image 2025-02-22 at 10.01.49 AM.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -27,7 +28,33 @@
                     </div>
                     
                     <div class="container-user">
-                        <i class="fa-solid fa-user"></i>
+                        <!-- Icono de login -->
+
+                        <i class="fa-solid fa-user" onclick="abrirModal()"></i>
+
+                        <!-- modal -->
+                        <div id="modalLogin" class="modal-fondo">
+                            <div class="modal">
+                              <div class="izquierda">
+                                <h2>Bienvenido</h2>
+                                <p>Introduce tus datos para crear una cuenta.</p>
+                              </div>
+                              <div class="derecha">
+                                <h2>Crear una cuenta</h2>
+                                <p><small>o usa tu correo electrónico</small></p>
+                                <input class="input" type="text" placeholder="Nombre">
+                                <input class="input" type="email" placeholder="Correo electrónico">
+                                <input class="input" type="password" placeholder="Contraseña">
+                                <button class="boton">ÚNETE</button>
+                              </div>
+                            </div>
+                            <span class="cerrar" onclick="cerrarModal()">&times;</span>
+                          </div>
+
+                        <!-- final del modal -->
+
+
+
                         <i class="fa-solid fa-cart-shopping"></i>
                         <div class="content-shoping-cart">
                             <span class="text">carrito</span>
