hice algunos cambios MMG

--- a/frontend/pagina_principal.html
+++ b/frontend/pagina_principal.html
@@ -30,7 +30,7 @@
                     <div class="container-user">
                         <!-- Icono de login -->
 
-                        <i class="fa-solid fa-user" onclick="abrirModal()"></i>
+                        <i class="fas fa-user login-icon" onclick="abrirModal()"></i>
 
                         <!-- modal -->
                         <div id="modalLogin" class="modal-fondo">
@@ -43,13 +43,15 @@
                                 <h2>Crear una cuenta</h2>
                                 <p><small>o usa tu correo electrónico</small></p>
                                 <input class="input" type="text" placeholder="Nombre">
-                                <input class="input" type="email" placeholder="Correo electrónico">
-                                <input class="input" type="password" placeholder="Contraseña">
+                                <input class="input" type="email" placeholder="email">
+                                <input class="input" type="password" placeholder="password">
                                 <button class="boton">ÚNETE</button>
                               </div>
                             </div>
                             <span class="cerrar" onclick="cerrarModal()">&times;</span>
                           </div>
+
+                          <script src="pagina_principal.js"></script>
 
                         <!-- final del modal -->
 
@@ -99,6 +101,7 @@
             <p>tecnologia al alcance de tus manos</p>
             <h2>RD_Tecnology <br>calidad y precio</h2>
             <a href="#">comprar ahora</a>
+            <img src="baner.jpg" alt="">
         </div>
     </section>
 
