puse algunos videos en cada pagina

--- a/frontend/pagina_TV.html
+++ b/frontend/pagina_TV.html
@@ -129,13 +129,17 @@
 
 
     </header>
-    <section class="banner"  data-aos="fade-up">
-        <div class="content-banner">
-            <p>tecnologia al alcance de tus manos</p>
-            <h2>RD_Tecnology <br>calidad y precio</h2>
-            <a href="#">comprar ahora</a>
-            <img src="baner.jpg" alt="">
-        </div>
+    <section class="banner">
+      <video autoplay muted loop playsinline class="video-banner">
+        <source src="videos/Samsung TV _ The Frame 2020(720P_HD).mp4" type="video/mp4">
+        Tu navegador no soporta videos HTML5.
+      </video>
+    
+      <div class="content-banner">
+        <p>tecnologia al alcance de tus manos</p>
+        <h2>RD_Tecnology <br>calidad y precio</h2>
+        <a href="#">comprar ahora</a>
+      </div>
     </section>
 
 
