bueno ya joan y euris estan conectados

--- a/frontend/pagina_MOVILES.html
+++ b/frontend/pagina_MOVILES.html
@@ -129,7 +129,7 @@
 
 
     </header>
-    <section class="banner">
+    <section class="banner" data-aos="fade-up">
       <video autoplay muted loop playsinline class="video-banner">
         <source src="videos/Galaxy S23 Series_ Unveiling _ Samsung(720P_HD).mp4" type="video/mp4">
         Tu navegador no soporta videos HTML5.
@@ -149,16 +149,16 @@
     <!--producto1-->
       <!--producto1-->
 
-<div class="productos-venta">
+<div class="productos-venta" data-aos="fade-up">
   
-  <div class="ofertas">
+  <div class="ofertas"data-aos="fade-up">
         <h1 class="parrafo-ofertas">Ofertas </h1>
     </div>
     
     
-        <div class="container-products1">
+        <div class="container-products1" data-aos="fade-up">
             <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -182,7 +182,7 @@
             </div>
           </div>
             <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -206,7 +206,7 @@
             </div>
           </div>
           <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -229,7 +229,7 @@
               </div>
           </div>
             <!--producto1-->
-            <div class="card-product1">
+            <div class="card-product1"data-aos="fade-up">
               <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -253,7 +253,7 @@
             </div>
           </div>
           <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
               <img src="imagenes/samsung1.jpeg" alt="samsung1">
               <span class="discount1">-10%</span>
