--- a/frontend/pagina_TV.html
+++ b/frontend/pagina_TV.html
@@ -129,7 +129,7 @@
 
 
     </header>
-    <section class="banner">
+    <section class="banner"data-aos="fade-up">
       <video autoplay muted loop playsinline class="video-banner">
         <source src="videos/Samsung TV _ The Frame 2020(720P_HD).mp4" type="video/mp4">
         Tu navegador no soporta videos HTML5.
@@ -148,16 +148,16 @@
     <!--producto1-->
       <!--producto1-->
 
-<div class="productos-venta">
+<div class="productos-venta" data-aos="fade-up">
   
-  <div class="ofertas">
+  <div class="ofertas" data-aos="fade-up">
         <h1 class="parrafo-ofertas">Ofertas </h1>
     </div>
     
     
-        <div class="container-products1">
+        <div class="container-products1" data-aos="fade-up">
             <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -181,7 +181,7 @@
             </div>
           </div>
             <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -228,7 +228,7 @@
               </div>
           </div>
             <!--producto1-->
-            <div class="card-product1">
+            <div class="card-product1" data-aos="fade-up">
               <div class="container-img1">
                 <img src="imagenes/samsung1.jpeg" alt="samsung1">
                 <span class="discount1">-10%</span>
@@ -252,7 +252,7 @@
             </div>
           </div>
           <!--producto1-->
-          <div class="card-product1">
+          <div class="card-product1" data-aos="fade-up">
             <div class="container-img1">
               <img src="imagenes/samsung1.jpeg" alt="samsung1">
               <span class="discount1">-10%</span>
