--- a/frontend/pagina_principal.html
+++ b/frontend/pagina_principal.html
@@ -65,9 +65,10 @@
                               <div class="derecha">
                                 <h2 class="crear-cuenta">Login</h2>
                                 <p><small></small></p>
-                                <input class="input" type="email" placeholder="email">
-                                <input class="input" type="password" placeholder="password">
-                                <button class="boton">ÚNETE</button>
+                                <input class="input" type="email" placeholder="email" id="loginEmail" />
+                                <input class="input" type="password" placeholder="password" id="loginPassword" />
+                                <button class="boton" onclick="handleLogin()">ENTRAR</button>
+                                
                               </div>
                             </div>
                             <span class="cerrar" onclick="cerrarModal2()">&times;</span>
