conecte todos los productos a la pagina_produco

--- a/frontend/pagina_TV.html
+++ b/frontend/pagina_TV.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RD_Tecnology</title>
+    <title>RD_Tecnology-TV</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -103,7 +103,7 @@
               <nav class="navbar container">
                   <i class="fa-solid fa-bars" id="menu-toggle"></i>
                   <ul class="menu">
-                    <li><a href="pagina_principal.html">Tienda Online>
+                    <li><a href="pagina_principal.html">Tienda Online </a></li>
                     <li><a href="pagina_MOVILES.html">Celulares</a></li>
                     <li><a href="pagina_TV.html">TV</a></li>
                     <li><a href="pagina_accesorios.html">Accesorios</a></li>
@@ -178,7 +178,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 65 OLED S90D 4K</h3>
+                <h3> <a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 65 OLED S90D 4K </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -202,7 +202,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 55 QLED 4K Q65C</h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 55 QLED 4K Q65C </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -227,7 +227,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-regular fa-star"></i>
             </div>
-            <h3>Televisor Samsung 43 Neo QLED 4K QN90C TV Gaming</h3>
+            <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 43 Neo QLED 4K QN90C TV Gaming </a></h3>
             <span class="add-cart1">
                 <i class="fa-solid fa-cart-shopping"></i>
             </span>
@@ -253,7 +253,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-regular fa-star"></i>
                         </div>
-                        <h3>Televisor Samsung 50 Neo QLED 4K QN90B</h3>
+                        <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 50 Neo QLED 4K QN90B </a></h3>
                         <span class="add-cart1">
                             <i class="fa-solid fa-cart-shopping"></i>
                         </span>
@@ -280,7 +280,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 98 QLED 4K Q80C</h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 98 QLED 4K Q80C </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -306,7 +306,7 @@
                           <i class="fa-solid fa-star"></i>
                           <i class="fa-regular fa-star"></i>
                       </div>
-                      <h3>Televisor Samsung 43 Smart TV Crystal UHD 4K CU7000</h3>
+                      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 43 Smart TV Crystal UHD 4K CU7000 </a></h3>
                       <span class="add-cart1">
                           <i class="fa-solid fa-cart-shopping"></i>
                       </span>
@@ -331,7 +331,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 75 CRYSTAL UHD 4K</h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 75 CRYSTAL UHD 4K </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -355,7 +355,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 75 QLED 4K</h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 75 QLED 4K </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -379,7 +379,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 85 Q70A QLED 4K Smart TV</h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -403,7 +403,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>Televisor Samsung 65 Class DU6900 Crystal UHD 4K Smart TV </h3>
+                <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 65 Class DU6900 Crystal UHD 4K Smart TV </a> </h3>
                 <span class="add-cart1">
                   <i class="fa-solid fa-cart-shopping"></i>
                 </span>
