--- a/frontend/pagina_MOVILES.html
+++ b/frontend/pagina_MOVILES.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RD_Tecnology</title>
+    <title>RD_Tecnology-Celulares</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -174,7 +174,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3 > <a class="samsungpro" href="pagina_producto.html">Samsung</a></h3>
+                <h3 ><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Galaxy S22</a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -198,7 +198,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>samsung</h3>
+                <h3 ><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Galaxy S22</a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -221,7 +221,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>samsung</h3>
+                <h3 > <a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Galaxy S22</a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -245,7 +245,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>samsung</h3>
+                <h3 > <a  class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Galaxy S22</a></h3>
                 <span class="add-cart1">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
@@ -269,7 +269,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h3>samsung</h3>
+                <h3 > <a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Galaxy S22</a></h3>
                 <span class="add-cart1">
                   <i class="fa-solid fa-cart-shopping"></i>
                 </span>
