--- a/frontend/pagina_electrodomesticos.html
+++ b/frontend/pagina_electrodomesticos.html
@@ -178,11 +178,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3> <a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 65 OLED S90D 4K </a></h3>
+      <h3> <a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">French Door RF18A5101SR/AA de 17.5 </a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$118,800.00 <span>$132,000.00</span></p>
+      <p class="price1">$76,954.00 <span>$85,695.00</span></p>
   </div>
 </div>
 
@@ -204,11 +204,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 55 QLED 4K Q65C </a></h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">BESPOKE RF9000 T Style French Door Refrigerator with Beverage Center™</a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$54,000.00 <span>$60,000.00</span></p>
+      <p class="price1">$195,895.00 <span>$225,490.00</span></p>
   </div>
 </div>
 
@@ -229,11 +229,11 @@
       <i class="fa-solid fa-star"></i>
       <i class="fa-regular fa-star"></i>
   </div>
-  <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 43 Neo QLED 4K QN90C TV Gaming </a></h3>
+  <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">French Door RF32CG5410S9AP con SpaceMax</a></h3>
   <span class="add-cart1">
       <i class="fa-solid fa-cart-shopping"></i>
   </span>
-  <p class="price1">$73,350.00 <span>$81,500.00</span></p>
+  <p class="price1">$143,595.00 <span>$149,500.00</span></p>
 </div>
 </div>
 
@@ -255,11 +255,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 98 QLED 4K Q80C </a></h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Estufa BeSpoke blanca, True Convection, Smart, Air Fry </a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$252,000.00 <span>$280,000.00</span></p>
+      <p class="price1">$91,695.00 <span>$99,995.00</span></p>
   </div>
 </div>
 
@@ -281,11 +281,11 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-regular fa-star"></i>
             </div>
-            <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 43 Smart TV Crystal UHD 4K CU7000 </a></h3>
+            <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Estufa a Gas con Quemador de Triple Potencia</a></h3>
             <span class="add-cart1">
                 <i class="fa-solid fa-cart-shopping"></i>
             </span>
-            <p class="price1">$22,500.00 <span>$25,000.00</span></p>
+            <p class="price1">$36,500.00 <span>$40,975.00</span></p>
         </div>
       </div>
 
@@ -306,11 +306,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 75 CRYSTAL UHD 4K </a></h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Estufa a Gas NX60A6715SS/AP con Gran Capacidad </a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$70,995.00 <span>$93,995.00</span></p>
+      <p class="price1">$67,995.00 <span>$76,500.00</span></p>
   </div>
 </div>
 
@@ -330,11 +330,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 75 QLED 4K </a></h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Lavadora de carga frontal WF8800A (WF24A8900AV/AP) con AI Wash, Super Speed y Smart Things</a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$122,995.00 <span>$135,000.00</span></p>
+      <p class="price1">$76,595.00 <span>$84,630.00</span></p>
     </div>
 </div>
   <!--producto1-->
@@ -354,11 +354,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Lavadora Combo con Eco Bubble™ </a></h3>
       <span class="add-cart1">
           <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+      <p class="price1">$47,695.00 <span>$55,905.00</span></p>
   </div>
 </div>
 <!--producto1-->
@@ -378,11 +378,11 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
       </div>
-      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 65 Class DU6900 Crystal UHD 4K Smart TV </a> </h3>
+      <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Lavadora WA24A8370GW con Digital Inverter</a> </h3>
       <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
       </span>
-      <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+      <p class="price1">$46,995.00 <span>$52,755.00</span></p>
   </div>
 </div>
 
@@ -405,11 +405,11 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star"></i>
     </div>
-    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">MS40DG5504ATAP Horno Microondas Descongelación Eléctrica Modo Eco Inoxidable</a></h3>
     <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
     </span>
-    <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+    <p class="price1">$16,905.00 <span>$21,500.00</span></p>
 </div>
 </div>
 
@@ -431,11 +431,11 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star"></i>
     </div>
-    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">MS32DG4504AGAX Horno Microondas Power Defrost 32L Inoxidable Negro</a></h3>
     <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
     </span>
-    <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+    <p class="price1">$14,495.00 <span>$15,500.00</span></p>
 </div>
 </div>
 
@@ -458,11 +458,11 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star"></i>
     </div>
-    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">MS402MADXBB MWO con Interior de Cerámica, 40 L</a></h3>
     <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
     </span>
-    <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+    <p class="price1">$17,995.00 <span>$23,500.00</span></p>
 </div>
 </div>
 
@@ -483,11 +483,11 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star"></i>
     </div>
-    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">MS23K3513AK/AP Microondas con Quick Defrost 23L</a></h3>
     <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
     </span>
-    <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+    <p class="price1">$9,900.00 <span>$13,500.00</span></p>
 </div>
 </div>
 
@@ -509,11 +509,11 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-regular fa-star"></i>
     </div>
-    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 85 Q70A QLED 4K Smart TV </a></h3>
+    <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Aire acondicionado para montaje en pared WindFree™ AR9500T con WindFree™</a></h3>
     <span class="add-cart1">
         <i class="fa-solid fa-cart-shopping"></i>
     </span>
-    <p class="price1">$86,995.00 <span>$95,500.00</span></p>
+    <p class="price1">$76,995.00 <span>$85,500.00</span></p>
 </div>
 </div>
 
@@ -536,11 +536,11 @@
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-regular fa-star"></i>
               </div>
-              <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">Televisor Samsung 50 Neo QLED 4K QN90B </a></h3>
+              <h3><a class="samsungpro" href="pagina_producto.html?id=6621784d4dcff3a84e6f2b2b">R18BVHCMWKXAP Aire Acondicionado con WindFree 18 BTU</a></h3>
               <span class="add-cart1">
                   <i class="fa-solid fa-cart-shopping"></i>
               </span>
-              <p class="price1">$200,000.00 <span>$180,000.00</span></p>
+              <p class="price1">$58,995.00 <span>$65,795.00</span></p>
           </div>
         </div>
 
