tu maldita madre

--- a/frontend/pagina_TV.html
+++ b/frontend/pagina_TV.html
@@ -141,9 +141,9 @@
       </video>
     
       <div class="content-banner">
-        <h2>RD_Tecnology </h2>
-        <p>Tecnologia al alcance de tus manos</p>
-        <a href="#">Comprar ahora</a>
+        <p>tecnologia al alcance de tus manos</p>
+        <h2>RD_Tecnology <br>TV Calidad 4K</h2>
+      
       </div>
     </section>
 
