--- a/frontend/pagina_accesorios.html
+++ b/frontend/pagina_accesorios.html
@@ -137,8 +137,8 @@
     
       <div class="content-banner">
         <p>tecnologia al alcance de tus manos</p>
-        <h2>RD_Tecnology <br>calidad y precio</h2>
-        <a href="#">comprar ahora</a>
+        <h2>RD_Tecnology <br>Accesorios </h2>
+        
       </div>
     </section>
 
